--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 <body>
     <main>
         <div id="inventory" class="inventory">
-            <img src="./assets/headphones.png" alt="headphones" id="headphones" class="item">
-            <img src="./assets/shirt.png" alt="shirt" id="shirt" class="item">
-            <img src="./assets/pants.png" alt="pants" id="pants" class="item">
-            <img src="./assets/body.png" alt="body" id="body" class="character">
+            <img src="./assets/headphones.png" alt="headphones" id="headphones" class="item interactive">
+            <img src="./assets/shirt.png" alt="shirt" id="shirt" class="item interactive">
+            <img src="./assets/pants.png" alt="pants" id="pants" class="item interactive">
+            <img src="./assets/body.png" alt="body" id="body" class="character interactive">
             <img src="./assets/dog_small.png" alt="dog" id="dog" class="interactive">
-            <img src="./assets/br_fl.png" alt="pt-br" id="pt-br" class="interactive flag">
-            <img src="./assets/uk_fl.png" alt="en" id="en" class="interactive flag">
+            <img src="./assets/br_fl.png" alt="pt_br" id="pt_br" class="interactive flag" onclick="setLanguage(pt_br)">
+            <img src="./assets/uk_fl.png" alt="en" id="en" class="interactive flag" onclick="setLanguage(en)">
         </div>
+        <div id="text"> 
+            <p id="description"></p>
+    </div>
         <img src="./assets/ui.png" alt="all" id="ui">
     </main>
     <div id="overlay" onclick="off()"></div>
