--- a/index.html
+++ b/index.html
@@ -14,19 +14,40 @@
 </head>
 <body>
     <main>
+
         <div id="inventory" class="inventory">
-            <img src="./assets/headphones.png" alt="headphones" id="headphones" class="item interactive">
-            <img src="./assets/shirt.png" alt="shirt" id="shirt" class="item interactive">
-            <img src="./assets/pants.png" alt="pants" id="pants" class="item interactive">
-            <img src="./assets/body.png" alt="body" id="body" class="character interactive">
-            <img src="./assets/dog_small.png" alt="dog" id="dog" class="interactive">
-            <img src="./assets/br_fl.png" alt="pt_br" id="pt_br" class="interactive flag" onclick="setLanguage(pt_br)">
-            <img src="./assets/uk_fl.png" alt="en" id="en" class="interactive flag" onclick="setLanguage(en)">
+            <div id="itemSlots">
+                <div id="head" class="itemSlot">
+                    <img src="./assets/headphones.png" alt="headphones" id="headphones" class="item interactive">
+                </div>
+
+                <div id="chest" class="itemSlot">
+                    <img src="./assets/shirt.png" alt="shirt" id="shirt" class="item interactive">
+                </div>
+
+                <div id="leg" class="itemSlot">
+                    <img src="./assets/pants.png" alt="pants" id="pants" class="item interactive">
+                </div>
+            </div>
+            <div id="character">
+                <img src="./assets/body.png" alt="body" id="body" class="character interactive">
+            </div>
         </div>
-        <div id="text">
-            <p id="description"></p>
+
+        <div id="descBox">
+            <div id="flags">
+                <img src="./assets/br_fl.png" alt="pt_br" id="pt_br" class="interactive flag" onclick="setLanguage(pt_br)">
+                <img src="./assets/uk_fl.png" alt="en" id="en" class="interactive flag" onclick="setLanguage(en)">
+            </div>
+            <div id="descText">
+                <p id="description"></p>
+            </div>
+        </div>
+        <div id="room">
+            <img src="./assets/dog_small.png" alt="dog" id="dog" class="interactive">
         </div>
         <img src="./assets/ui.png" alt="all" id="ui">
+
     </main>
     <div id="overlay" onclick="off()"></div>
     <script src="./index.js"></script>
