Fix/Firefox compatibility

--- a/index.html
+++ b/index.html
@@ -18,35 +18,35 @@
         <div id="inventory" class="inventory">
             <div id="itemSlots">
                 <div id="head" class="itemSlot">
-                    <img src="./assets/headphones.png" alt="headphones" id="headphones" class="item interactive">
+                    <img src="./assets/headphones.png" alt="headphones" id="headphones" class="item interactive" draggable="false">
                 </div>
 
                 <div id="chest" class="itemSlot">
-                    <img src="./assets/shirt.png" alt="shirt" id="shirt" class="item interactive">
+                    <img src="./assets/shirt.png" alt="shirt" id="shirt" class="item interactive" draggable="false">
                 </div>
 
                 <div id="leg" class="itemSlot">
-                    <img src="./assets/pants.png" alt="pants" id="pants" class="item interactive">
+                    <img src="./assets/pants.png" alt="pants" id="pants" class="item interactive" draggable="false">
                 </div>
             </div>
             <div id="character">
-                <img src="./assets/body.png" alt="body" id="body" class="character interactive">
+                <img src="./assets/body.png" alt="body" id="body" class="character interactive" draggable="false">
             </div>
         </div>
 
         <div id="descBox">
             <div id="flags">
-                <img src="./assets/br_fl.png" alt="pt_br" id="pt_br" class="interactive flag" onclick="setLanguage(pt_br)">
-                <img src="./assets/uk_fl.png" alt="en" id="en" class="interactive flag" onclick="setLanguage(en)">
+                <img src="./assets/br_fl.png" alt="pt_br" id="pt_br" class="interactive flag" onclick="setLanguage(pt_br)" draggable="false">
+                <img src="./assets/uk_fl.png" alt="en" id="en" class="interactive flag" onclick="setLanguage(en)" draggable="false">
             </div>
             <div id="descText">
-                <p id="description"></p>
+                <p id="description">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
             </div>
         </div>
         <div id="room">
-            <img src="./assets/dog_small.png" alt="dog" id="dog" class="interactive">
+            <img src="./assets/dog_small.png" alt="dog" id="dog" class="interactive" draggable="false">
         </div>
-        <img src="./assets/ui.png" alt="all" id="ui">
+        <img src="./assets/ui.png" alt="all" id="ui" draggable="false">
 
     </main>
     <div id="overlay" onclick="off()"></div>
