Fixed/Resolution for mobile

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <img src="./assets/uk_fl.png" alt="en" id="en" class="interactive flag" onclick="setLanguage(en)" draggable="false">
             </div>
             <div id="descText">
-                <p id="description">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                <p id="description"></p>
             </div>
         </div>
         <div id="room">
